# french-law

./: pyproject.toml
data/: get_raw_data.py  pipeline.py  process_raw_data.py
