[project]
name = "learn-hf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "datasets>=4.4.2",
    "gradio>=6.2.0",
    "helium>=5.1.2",
    "huggingface-hub>=0.36.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.36.1",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "selenium>=4.39.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "smolagents[toolkit]>=1.23.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wikipedia-api>=0.8.1",
]
